--- a/css/puja_new.css
+++ b/css/puja_new.css
@@ -23,7 +23,7 @@ nav{
    
     height:80px;
     width:100%;
-    background-color: #15f345;
+    background-color: blue;
 }
 nav a{
     color: rgb(1, 19, 7);
